# webkit

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CMakePresets.json  ChangeLog  Makefile  ToolchainMIPS.cmake  win-terminal.sh  win_environment.reg
.github/workflows/: build_cmake.yml  draft_release.yml
JSTests/microbenchmarks/: array-prototype-includes-int32.js
JSTests/wasm/stress/: cc-i32-kitchen-sink.js  cc-int-to-int.js
LayoutTests/: ChangeLog
LayoutTests/accessibility/: opacity-0-bounding-box.html
LayoutTests/apple-visual-effects/: apple-visual-effect-blur-material-thick-expected.txt  apple-visual-effect-vibrancy-effects-expected.txt
LayoutTests/fast/forms/: slider-track-not-input-element.html
LayoutTests/fast/images/: hdr-basic-image-expected.html
LayoutTests/fast/js/: dfg-or-zero-expected.txt  dfg-or-zero.html  jsc-test-list  line-column-numbers-expected.txt
LayoutTests/fullscreen/: full-screen-enter-while-exiting.html
LayoutTests/platform/gtk/: TestExpectations
Source/: CMakeLists.txt  PlatformQt.cmake  Qt6WebKitConfig.cmake.in  Qt6WebKitWidgetsConfig.cmake.in  widgetsapi.pri
Source/JavaScriptCore/: CMakeLists.txt  ChangeLog  PlatformNix.cmake  PlatformQt.cmake  Sources.txt  Target.pri  jsc.cpp  testRegExp.cpp
Source/WebCore/: CMakeLists.txt  ChangeLog  PlatformQt.cmake  Sources.txt  Target.pri  WebCore.exp.in  WebCore.pri  WebCorePrefix.h
Source/WebInspectorUI/: PlatformQt.cmake
Source/WebKit/: CMakeLists.txt  ChangeLog  PlatformQt.cmake  PlatformWPE.cmake
Source/WebKit2/: Target.pri
Source/WebKitLegacy/: CMakeLists.txt  PlatformQt.cmake
Source/WebKitLegacy/Storage/: StorageAreaImpl.cpp  StorageAreaImpl.h  StorageAreaSync.cpp  StorageAreaSync.h  StorageNamespaceImpl.cpp  StorageNamespaceImpl.h  StorageTracker.cpp  StorageTracker.h  WebStorageNamespaceProvider.cpp  WebStorageNamespaceProvider.h
Source/WebKitLegacy/WebCoreSupport/: SocketStreamHandleImpl.cpp  SocketStreamHandleImpl.h  WebResourceLoadScheduler.cpp  WebResourceLoadScheduler.h
Source/WebKitLegacy/qt/: WebKitPrefix.h  WebKitWidgetsPrefix.h
Source/WebKitLegacy/qt/Api/: qwebbytecodecachedelegate.cpp  qwebbytecodecachedelegate.h  qwebbytecodediskcache.cpp  qwebbytecodediskcache.h  qwebelement.cpp  qwebelement_p.cpp  qwebelement_p.h  qwebfullscreenrequest.cpp  qwebhistory.cpp  qwebplugindatabase.cpp  qwebplugindatabase_p.h  qwebpluginfactory.cpp  qwebresourcetypes.h  qwebscriptworld.cpp  qwebscriptworld_p.h  qwebsecurityorigin.cpp  qwebsecurityorigin.h  qwebsettings.cpp  qwebsettings.h
Source/WebKitLegacy/qt/Plugins/: PluginViewQt.cpp
Source/WebKitLegacy/qt/WebCoreSupport/: BackForwardList.cpp  BackForwardList.h  BytecodeCacheSupport.cpp  BytecodeCacheSupport.h  ChromeClientQt.cpp  ChromeClientQt.h  ChromeClientQt.h.orig  ContextMenuClientQt.cpp  ContextMenuClientQt.h  CryptoClientQt.cpp  CryptoClientQt.h  DataListSuggestionPickerQt.cpp  DataListSuggestionPickerQt.h  DragClientQt.cpp  DragClientQt.h  DumpRenderTreeSupportQt.cpp  DumpRenderTreeSupportQt.h  EditorClientQt.cpp  EditorClientQt.h  EvaluateJS.cpp  EvaluateJS.h  FrameLoaderClientQt.cpp  FrameLoaderClientQt.h  FrameNetworkingContextQt.cpp  FrameNetworkingContextQt.h  GeolocationClientQt.cpp  GeolocationClientQt.h  GeolocationPermissionClientQt.cpp  HistorySerialization.cpp  InitWebCoreQt.cpp  InitWebCoreQt.h  InspectorClientQt.cpp  InspectorClientQt.h  InspectorServerQt.cpp  LegacyHistoryItemClient.cpp  LegacyHistoryItemClient.h  NotificationPresenterClientQt.cpp  NotificationPresenterClientQt.h  PlatformStrategiesQt.cpp  PlatformStrategiesQt.h  (+23 more)
Source/WebKitLegacy/qt/WidgetApi/: qgraphicswebview.cpp  qwebframe.cpp  qwebframe_p.h  qwebpage.cpp  qwebpage.h  qwebpage_p.cpp  qwebpage_p.h
Source/WebKitLegacy/qt/WidgetSupport/: PageClientQt.cpp  QStyleFacadeImp.cpp  QStyleFacadeImp.h  QtFallbackWebPopup.cpp  QtWebComboBox.cpp
Source/WebKitLegacy/qt/declarative/: CMakeLists.txt
Source/WebKitLegacy/qt/declarative/experimental/: CMakeLists.txt
Source/WebKitLegacy/qt/tests/qobjectbridge/: tst_qobjectbridge.cpp
Source/WebKitLegacy/qt/tests/qwebpage/: tst_qwebpage.cpp
Source/WebKitLegacy/qt/tests/qwebsecurityorigin/: tst_qwebsecurityorigin.cpp
Source/WebKitLegacy/qt/tests/qwebview/: tst_qwebview.cpp
Source/WebKitLegacy/win/Plugins/: PlatformModule.h  PluginDatabase.cpp  PluginDatabaseWin.cpp  PluginPackage.cpp  PluginPackageWin.cpp  PluginView.cpp  PluginView.h  PluginViewWin.cpp  npapi.cpp
Source/bmalloc/: CMakeLists.txt  PlatformQt.cmake
Source/cmake/: ECMGeneratePkgConfigFile.cmake  ECMGeneratePriFile.cmake  ECMQueryQmake.cmake  FindHarfBuzz.cmake  FindOpenGL.cmake  FindOpenXR.cmake  FindWOFF2Dec.cmake  GStreamerChecks.cmake  KDEInstallDirs.cmake  OptionsCommon.cmake  OptionsGTK.cmake  OptionsJSCOnly.cmake  OptionsNix.cmake  OptionsQt.cmake  OptionsWPE.cmake  WebKitCommon.cmake  WebKitFeatures.cmake  WebKitMacros.cmake
Tools/: CMakeLists.txt  ChangeLog  PlatformQt.cmake
Tools/BuildSlaveSupport/: built-product-archive
Tools/CISupport/: built-product-archive  test-result-archive
Tools/DumpRenderTree/: AccessibilityUIElement.h  CMakeLists.txt  DumpRenderTree.h  PlatformQt.cmake  PlatformWin.cmake  TestRunner.cpp  config.h
Tools/ImageDiff/: PlatformQt.cmake
Tools/QtTestBrowser/: CMakeLists.txt  cookiejar.cpp  launcherwindow.cpp  launcherwindow.h  locationedit.cpp  qttestbrowser.cpp  urlloader.cpp  webinspector.h  webview.cpp
Tools/Scripts/: VCSUtils.pm  build-jsc  build-webkit  build-webkittestrunner  run-layout-jsc  update-qtwebkit-win-libs  update-webkit-libs-jhbuild  webkitdirs.pm
Tools/TestRunnerShared/: PlatformQt.cmake
Tools/TestWebKitAPI/: CMakeLists.txt  PlatformQt.cmake  PlatformWebView.h  Utilities.cpp
Tools/WebKitTestRunner/: EventSenderProxy.h  PlatformQt.cmake  PlatformWebView.h  TestController.cpp  TestController.h
Tools/jhbuild/: jhbuild-wrapper
Tools/qt/: QtBinaryChecklist.txt  build-qtwebkit-conan.py  conanfile.py  convert-prl-libs-to-cmake.pl  generate-dependencies-yaml  qt-downloader  update-wip-qtwebkit-refs
tests/webkitwidgets/: CMakeLists.txt
(+848 files in other folders)
